add vehicle full reindex function